--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
+
+spring.datasource.url=jdbc:h2:mem:safety_stock
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
