--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:h2:mem:safety_stock
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+server.port=8081
